# raytracer-c

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: CI.yml  cmake.yml  codeql-analysis.yml
build-debug/module_shapes/: Makefile  cmake_install.cmake
build-debug/module_utilities/: Makefile  cmake_install.cmake
demo/: CMakeLists.txt  csg.c  parabola.c  phong_render_sphere.c  phong_render_three_spheres.c  phong_render_three_spheres_and_plane.c  phong_render_three_spheres_and_striped_plane.c  random_spheres.c  reflection.c  refraction.c  refraction_cube.c  refraction_cylinder.c  render_obj.c  sphere_shadow.c  sphere_spin.c  texture_map.c
main/: CMakeLists.txt  csg.c  main.c  parabola.c  phong_render_sphere.c  phong_render_three_spheres.c  phong_render_three_spheres_and_plane.c  phong_render_three_spheres_and_striped_plane.c  random_spheres.c  reflection.c  refraction.c  refraction_cube.c  refraction_cylinder.c  render.c  render_obj.c  sphere_shadow.c
module_datastructures/: CMakeLists.txt  arrlist.c  arrlist.h  camera.c  camera.h  canvas.c  canvas.h  intersections.c  intersections.h  lights.c  lights.h  linkedlist.c  linkedlist.h  material.c  material.h  matrix.c  matrix.h  ray.c  ray.h  shape.c  shape.h  shapeholder.c  shapeholder.h  sphere.c  sphere.h  testshape.c  testshape.h  tuples.c  tuples.h  wavefrontobj.c  wavefrontobj.h  world.c  world.h
module_math/: CMakeLists.txt  matrix.c  matrix.h  tuples.c  tuples.h
module_patterns/: CMakeLists.txt  pattern.c  pattern.h  uv_pattern.c  uv_pattern.h
module_raytracer/: CMakeLists.txt  arrlist.c  camera.c  camera.h  canvas.c  canvas.h  configuration.c  configuration.h  lights.c  lights.h  material.c  material.h  ray.c  ray.h  sequences.c  sequences.h  wavefrontobj.c  wavefrontobj.h  world.c  world.h  yamlloader.c  yamlloader.h
module_shapes/: CMakeLists.txt  bound.c  bound.h  cone.c  cone.h  csg.c  csg.h  cube.c  cube.h  cylinder.c  cylinder.h  group.c  group.h  plane.c  plane.h  shape.c  shape.h  sphere.c  sphere.h  testshape.c  testshape.h  triangle.c  triangle.h
module_utilities/: CMakeLists.txt  exceptions.c  exceptions.h  logger.c  logger.h  proj_exceptions.h  simple_logger.c  simple_logger.h  utilities.c  utilities.h
scenes/: README.md  align-check-plane.yml  chap7-putting-it-together.yml  christmas.yml  metal.yml  puppets.yml  shadow-glamour-shot.yml  table-without-materials.yml  table-without-patterns.yml  table.yml
test/: CMakeLists.txt  testutils.h
test/module_datastructures/: CMakeLists.txt  test_arrlist.c  test_camera.c  test_canvas.c  test_intersections.c  test_lights.c  test_linkedlist.c  test_material.c  test_matrix.c  test_rays.c  test_shape.c  test_sphere.c  test_tuples.c  test_wavefrontobj.c  test_world.c  test_world_utils.h  testutils.h
test/module_math/: CMakeLists.txt  test_matrix.c  test_tuples.c
test/module_patterns/: CMakeLists.txt  test_pattern.c  test_uv_pattern.c  testutils.h
test/module_raytracer/: CMakeLists.txt  test_camera.c  test_canvas.c  test_lights.c  test_material.c  test_rays.c  test_sequences.c  test_wavefrontobj.c  test_world.c  test_world_utils.h  test_yamlloader.c
test/module_shapes/: CMakeLists.txt  test_bound.c  test_cone.c  test_csg.c  test_cube.c  test_cylinder.c  test_group.c  test_plane.c  test_shape.c  test_sphere.c  test_triangle.c  testutils.h
test/module_utilities/: CMakeLists.txt  test_simple_logger.c  test_utilities.c
